--- a/.github/workflows/mdbook.yaml
+++ b/.github/workflows/mdbook.yaml
@@ -25,7 +25,7 @@ jobs:
       with:
         ref: gh-pages
     # do not remove helm chart related files if present
-    - run: ls | grep -v -E "index.yaml|$(basename $(git rev-parse --show-toplevel))-.*\.tgz" | xargs rm -rf
+    - run: ls | grep -v -E "index.yaml|.*\.tgz" | xargs rm -rf
     - uses: actions/download-artifact@v2
       with:
         name: book
